--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@
  * limitations under the License.
  -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.openintents.filemanager"
+    package="org.openintents.cmfilemanager"
     android:installLocation="auto"
 	android:versionName="1.1.6"
 	android:versionCode="17">
@@ -114,7 +114,7 @@
         
         <activity android:name=".PreferenceActivity" android:label="@string/settings" />
         
-    <provider android:name=".FileManagerProvider" android:authorities="org.openintents.filemanager"></provider>
+    <provider android:name=".FileManagerProvider" android:authorities="org.openintents.cmfilemanager"></provider>
     
 		<!-- Activities from OI Distribution Library -->
         <activity android:name="org.openintents.distribution.EulaActivity" />
