--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,6 +34,7 @@
 	[1] 1.0.0: 2008-12-10
 	-->
 	
+	    
         <uses-sdk android:minSdkVersion="2"
             android:targetSdkVersion="9" />
         <!-- If targetSdkVersion is increased from 4 to 5 or higher, 
@@ -49,7 +50,7 @@
     
         <!-- aTrackDog metadata -->
         <meta-data android:name="com.a0soft.gphone.aTrackDog.testVersion"
-           android:value="15" />
+           android:value="13" />
            
 		<meta-data android:name="org.openintents.metadata.COMMENTS"
                        android:value="@string/about_comments" />
@@ -60,7 +61,7 @@
         <meta-data android:name="org.openintents.metadata.DOCUMENTERS"
                        android:resource="@array/about_documenters" />
         <meta-data android:name="org.openintents.metadata.TRANSLATORS"
-                       android:resource="@string/about_translators" />
+                       android:resource="@array/about_translators" />
         <meta-data android:name="org.openintents.metadata.ARTISTS"
                        android:resource="@array/about_artists" />
         <meta-data android:name="org.openintents.metadata.WEBSITE_LABEL"
@@ -75,6 +76,10 @@
                        android:resource="@raw/recent_changes" />
                        
         <activity android:name=".FileManagerActivity" android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.CREATE_SHORTCUT" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -117,7 +122,7 @@
     <provider android:name=".FileManagerProvider" android:authorities="org.openintents.cmfilemanager"></provider>
     
 		<!-- Activities from OI Distribution Library -->
-        <activity android:name="org.openintents.distribution.EulaActivity" />
-        <activity android:name="org.openintents.distribution.NewVersionActivity" />
+        <activity android:name="org.openintents.cmfilemanager.EulaActivity" />
+        <activity android:name="org.openintents.cmfilemanager.NewVersionActivity" />
 </application>
 </manifest> 
