--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -107,7 +107,7 @@
         </activity>
         
         <activity android:name=".PreferenceActivity" android:label="@string/settings" />
-        
+        <activity android:name=".ApplicationBackup" android:label="Installed Applications" />
         <!-- Filters for the Save as feature -->
         <activity android:name=".SaveAsActivity" android:label="Save as">
             <!-- Save as a file: scheme (e.g. After downloading attachment in GMail -->
@@ -145,7 +145,6 @@
     
 		<!-- Activities from OI Distribution Library -->
         <activity android:name="org.openintents.distribution.NewVersionActivity" />
-
         <activity android:name="org.openintents.distribution.EulaActivity"
               android:label="@string/oi_distribution_eula_title">
         </activity>
